--- a/index.html
+++ b/index.html
@@ -130,10 +130,12 @@ var player = {
         this.turnback = 0.1
 
         // Defining Starting Variables On Creation
-        this.width = 25;
+        this.width = 50;
         this.height = 100;
         this.speed = 0;
         this.rotation = 0;
+        this.image = new Image();
+        this.image.src = "car.png";
     },
 
     // Move The Sprite When Update Is Called
@@ -163,7 +165,7 @@ var player = {
         // Update Visuals
         canvas = gameWindow.context;
         canvas.fillStyle = "purple";
-        canvas.fillRect(gameWindow.canvas.width/2-(this.width/2*(camera.czoom/100)), gameWindow.canvas.height/2-(this.height/2*(camera.czoom/100)), this.width*(camera.czoom/100), this.height*(camera.czoom/100));
+        canvas.drawImage(this.image, gameWindow.canvas.width/2-(this.width/2*(camera.czoom/100)), gameWindow.canvas.height/2-(this.height/2*(camera.czoom/100)), this.width*(camera.czoom/100), this.height*(camera.czoom/100));
     }
 }
 
