--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ this.asphaltpreload.src = "crasphalt.jpg";
 this.grasspreload = new Image();
 this.grasspreload.src = "grass.png";
 
+this.lightpole = new Image();
+this.lightpole.src = "lightpole.png";
+
 // Launch The Game
 function startGame() {
     gameWindow.start(0, 0, 0, zoom);
@@ -80,6 +83,10 @@ function startGame() {
 
         new shape("rect", -300, 0, 0, 20, 800, "dimgray"),
         new shape("rect", 300, 0, 0, 20, 800, "dimgray"),
+
+        new shape("image", 300, 0, 90, 50, 200, lightpole),
+        new shape("image", 300, 150, 90, 50, 200, lightpole),
+        new shape("image", 300, -150, 90, 50, 200, lightpole),
     ]
     
     updatelist = terrain.concat(spritelist);
@@ -132,7 +139,7 @@ var camera = {
         this.distance = Math.sqrt(Math.pow(x-this.cx,2)+Math.pow(y-this.cy,2))*(this.czoom/100)
         this.angle = degrees(Math.atan2((y-this.cy),(x-this.cx)))+this.cangle
         this.x2 = (Math.cos(radians(this.angle))*this.distance)
-        this.y2 = (Math.sin(radians(this.angle))*this.distance) - (player.height/3)
+        this.y2 = (Math.sin(radians(this.angle))*this.distance)
         this.angle2 = rot - this.cangle
         return [this.x2, this.y2, this.angle2, this.angle]
     }
@@ -205,13 +212,16 @@ var player = {
         // Update Positions
         if (this.speed > 0) {
             camera.cangle += this.rotation * this.speed/5;
+            camera.cx += (this.speed * Math.sin(radians(this.rotation*20))) * (Math.sin(radians(camera.cangle)));
+            camera.cy += (this.speed * Math.cos(radians(this.rotation*20))) * (Math.cos(radians(camera.cangle)));
         }
         if (this.speed < 0) {
             camera.cangle += this.rotation * this.speed/5;
         }
-        camera.cx += this.speed * Math.sin(radians(camera.cangle));
-        camera.cy += this.speed * Math.cos(radians(camera.cangle));
-        
+        if (this.rotation == 0) {
+            camera.cx += this.speed * (Math.sin(radians(camera.cangle)));
+            camera.cy += this.speed * (Math.cos(radians(camera.cangle)));
+        }
 
         // Physics
         if (!up && !down) {
@@ -250,9 +260,9 @@ var player = {
 }
 
 function shape(type, x, y, angle, width, height, fill="black") {
-    if(type = "image"){this.type=0}
-    else if(type = "rect"){this.type=1}
-    else if(type = "rectangle"){this.type=1}
+    if(type == "image"){this.type=0}
+    else if(type == "rect"){this.type=1}
+    else if(type == "rectangle"){this.type=1}
     else{this.type=1}
     this.x = x;
     this.y = y;
@@ -261,18 +271,18 @@ function shape(type, x, y, angle, width, height, fill="black") {
     this.height = height;
     this.fill = fill;
 
+    console.debug(this.type, this.fill)
+
     this.update = function() {
         canvas = gameWindow.context;
         canvas.save();
         this.pos = camera.position(this.x,this.y,this.angle)
         canvas.translate(((gameWindow.canvas.width/2 + this.pos[0])), ((gameWindow.canvas.height/2 - this.pos[1])));
         canvas.rotate(radians(this.pos[2]));
-        if(this.type = 0) {
-            this.image = new Image();
-            this.image.src = this.fill;
-            canvas.drawImage(this.image, (this.width*(camera.czoom/100)) / -2, (this.height*(camera.czoom/100)) / -2, this.width*(camera.czoom/100), this.height*(camera.czoom/100));
+        if(this.type == 0) {
+            canvas.drawImage(this.fill, (this.width*(camera.czoom/100)) / -2, (this.height*(camera.czoom/100)) / -2, this.width*(camera.czoom/100), this.height*(camera.czoom/100));
         }
-        else if(this.type = 1) {
+        else if(this.type == 1) {
             canvas.fillStyle = this.fill; 
             canvas.fillRect((this.width*(camera.czoom/100)) / -2, (this.height*(camera.czoom/100)) / -2, this.width*(camera.czoom/100), this.height*(camera.czoom/100));
         }
